--- a/SASS/main.css
+++ b/SASS/main.css
@@ -813,6 +813,9 @@ h2 {
 }
 
 @media (max-width: 575px) {
+  .about h1 {
+    font-size: 2rem;
+  }
   .box-title {
     background-color: #16052c;
     width: 100%;
